made more changes

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author:
 hero:
   title: Mox
   description: Offensive Security, and food for thought.
-  image: '/images/01.jpg'
+  image: '/images/lol.jpg'
 
 
 #-------------------------------
