made more changes

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
 # Hero Settings
 hero:
   title: Mox
-  description: Offensive Security, and food for thought.
+  description: Software engineering, AI, and food for thought.
   image: '/images/lol.jpg'
 
 
